# book_management_system

./: .env  Cargo.toml  LICENSE  README.md
sql/: test.sql
src/: main.rs
src/controllers/: book_controller.rs  mod.rs
src/daos/: book_dao.rs  mod.rs
src/entities/: book.rs
src/services/: book_service.rs  mod.rs
templates/: index.html
